--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -166,6 +166,7 @@
         android:id="@+id/placeOrderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="createOrder"
         android:text="@string/place_order"/>
 
 
