--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentStart="true">
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/orderTotalTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -29,22 +29,22 @@
             android:textSize="18sp"/>
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/itemsOrderedTextView"
             android:layout_width="wrap_content"
-            android:paddingTop="24dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingTop="24dp"
             android:text="@string/items_ordered"/>
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/subtotalTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/subtotal"/>
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/taxTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -52,11 +52,12 @@
             android:text="@string/tax"/>
 
         <Button
-            android:id="@+id/button2"
-            android:layout_marginLeft="8dp"
+            android:id="@+id/newOrderButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:layout_weight="1"
+            android:onClick="goBack"
             android:text="@string/new_order"
             android:textSize="12sp"/>
     </LinearLayout>
