--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -35,7 +35,9 @@
             android:layout_row="0"
             android:ems="10"
             android:gravity="right"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:text="0"
+            android:textAlignment="textStart"/>
 
         <TextView
             android:id="@+id/textView2"
@@ -52,7 +54,8 @@
             android:ems="10"
             android:gravity="right"
             android:inputType="number"
-            />
+            android:text="0"
+            android:textAlignment="textStart"/>
 
         <TextView
             android:id="@+id/textView3"
@@ -68,7 +71,9 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:gravity="right"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:text="0"
+            android:textAlignment="textStart"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -85,7 +90,8 @@
             android:ems="10"
             android:gravity="right"
             android:inputType="number"
-            />
+            android:text="0"
+            android:textAlignment="textStart"/>
 
         <TextView
             android:id="@+id/textView6"
@@ -110,7 +116,9 @@
             android:layout_row="5"
             android:ems="10"
             android:gravity="right"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:text="0"
+            android:textAlignment="textStart"/>
 
         <EditText
             android:id="@+id/mediumDrinkTextView"
@@ -120,7 +128,9 @@
             android:layout_row="6"
             android:ems="10"
             android:gravity="right"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:text="0"
+            android:textAlignment="textStart"/>
 
         <EditText
             android:id="@+id/largeDrinkTextView"
@@ -130,7 +140,9 @@
             android:layout_row="7"
             android:ems="10"
             android:gravity="right"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:text="0"
+            android:textAlignment="textStart"/>
 
         <TextView
             android:id="@+id/textView"
