--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -17,13 +17,13 @@
         android:layout_marginStart="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout">
 
         <TextView
             android:id="@+id/orderTotalTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/order_total"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textSize="18sp"/>
@@ -61,4 +61,5 @@
             android:text="@string/new_order"
             android:textSize="12sp"/>
     </LinearLayout>
+
 </RelativeLayout>
